<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.petpoint.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.capstone.petpoint.ui.emergency.EmergencyFragment"
        android:label="Emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/navigation_chat_bot"
        android:name="com.capstone.petpoint.ui.chat_bot.ChatBotFragment"
        android:label="@string/chat_bot"
        tools:layout="@layout/fragment_chat_bot" />

    <fragment
        android:id="@+id/navigation_my_report"
        android:name="com.capstone.petpoint.ui.myreport.MyReportFragment"
        android:label="@string/my_report"
        tools:layout="@layout/fragment_my_report" />
</navigation>