<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/gray_200"
        app:cardCornerRadius="24dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_pet_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catagory_of_pet"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                app:layout_constraintTop_toBottomOf="@id/tv_pet_category"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_reporting_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporting"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_report_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_11_2024"
                app:layout_constraintTop_toBottomOf="@id/tv_reporting_time"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_report_date"
                android:text="Report status"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="28dp"
                android:textStyle="bold"
                android:textSize="16dp"/>

                <TextView
                    android:id="@+id/tv_status_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/witing_list"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_status"
                    android:layout_marginTop="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>