<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".auth.RegisterActivity">

    <ImageView
        android:id="@+id/img_on_boarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/on_boarding_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <TextView
                android:id="@+id/tv_lets"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:text="@string/let_s_sign_up_first"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_onboarding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_lets"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/gray"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_username"
                android:hint="@string/email"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:hint="@string/password"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tv_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/username_text_input_layout"
                android:hint="@string/role"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@id/tv_role"
                android:layout_marginTop="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>