<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">
    
    <ImageView
        android:id="@+id/img_article"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:src="@drawable/img_article"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title_article"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/img_article"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_article"
        android:layout_marginStart="18dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_desc_article"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/img_article"
        app:layout_constraintTop_toBottomOf="@id/tv_title_article"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/desc_article"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tv_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_article"
        app:layout_constraintStart_toEndOf="@id/img_article"
        app:layout_constraintBottom_toBottomOf="@id/img_article"
        android:layout_marginStart="18dp"
        android:text="@string/_2_horus_ago"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_article"
        android:src="@drawable/baseline_bookmark_border_24" />


</androidx.constraintlayout.widget.ConstraintLayout>